--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,4 +1,5 @@
-FROM java:8
-WORKDIR éapp
-copy ./.mvn/wrapper/maven-wrapper.jar ./server.jar
-ENTRYPOINT ["/usr/bin/java", "-jar", "server.jar"]
+From maven as maven
+workdir /build
+copy . .
+run mvn clean package
+run ls target
