--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,29 +1,22 @@
 ---
 version: '3.7'
 services:
-    nginx:
-      
-      depends_on:
-        
-    server:
-      
-    client:
-      
-      
-      environment:
-      - REACT_APP_SERVICE_HOST=${REACT_APP_SERVICE_HOST}
-    mongo:
-      
-    mongo-seed:
-      image: fvilers/mongo-seed:1.0.0
-      environment:
-      - MONGO_HOST=mongo
-      - MONGO_PORT=27017
-      volumes:
-      - ./data:/data
-      command:
-      - "mongoimport --host mongo --port 27017 --db test --mode upsert --type json --file /data/account.json --jsonArray"
-
-  
-...
-
+  mongo-seed:
+    image: fvilers/mongo-seed:1.0.0
+    environment:
+    - MONGO_HOST=mongo
+    - MONGO_PORT=27017
+    volumes:
+    - ./data:/data
+    command:
+    - "mongoimport --host mongo --port 27017 --db test --mode upsert --type json --file /data/account.json --jsonArray"
+  mongo:
+    image: mongo
+  server:
+          image: benm96/paserver:v1
+          depends_on:
+                  - mongo
+          ports:
+                  - target: 8080
+                    published: 8080
+          
