--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,8 +10,10 @@ services:
     - ./data:/data
     command:
     - "mongoimport --host mongo --port 27017 --db test --mode upsert --type json --file /data/account.json --jsonArray"
+    depends_on:
+            - mongo
   mongo:
-    image: mongo
+          image: mongo:latest
   server:
           image: benm96/paserver:v1
           depends_on:
