changed nginx file

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,8 @@
 http{
 	server{
+		listen 80;
 		location /{
-                        proxy_pass localhost:3000
+                        proxy_pass https://localhost:3000
 		}
 	}
 }
