--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,8 +1,9 @@
+events{}
 http{
 	server{
 		listen 80;
 		location /{
-                        proxy_pass https://localhost:3000
+                        proxy_pass https://localhost:3000;
 		}
 	}
 }
